scanner.c
/* Generated by re2c 0.16 on Fri Nov  4 20:40:21 2016 */
#line 1 "scanner.re"
#include "scanner.def.h"
#include "parser.h"
#include "scan.h"
#include "readmem.h"

int numerizer_start(scanstate *ss) {
    scanner_enter(ss);
    
#line 12 "scanner.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	if ((YYLIMIT - YYCURSOR) < 9) YYFILL(9);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\n':
	case '\f':
	case '\r':
	case ' ':	goto yy6;
	case '-':	goto yy8;
	case 'B':
	case 'b':	goto yy10;
	case 'E':
	case 'e':	goto yy11;
	case 'F':
	case 'f':	goto yy12;
	case 'H':
	case 'h':	goto yy13;
	case 'M':
	case 'm':	goto yy14;
	case 'N':
	case 'n':	goto yy15;
	case 'O':
	case 'o':	goto yy16;
	case 'Q':
	case 'q':	goto yy17;
	case 'S':
	case 's':	goto yy18;
	case 'T':
	case 't':	goto yy19;
	case 'Z':
	case 'z':	goto yy20;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 77 "scanner.re"
	{ return 0; }
#line 54 "scanner.c"
yy4:
	++YYCURSOR;
yy5:
#line 79 "scanner.re"
	{ return TOKEN_CHARACTER; }
#line 60 "scanner.c"
yy6:
	++YYCURSOR;
#line 74 "scanner.re"
	{ return TOKEN_WHITESPACE; }
#line 65 "scanner.c"
yy8:
	++YYCURSOR;
#line 75 "scanner.re"
	{ return TOKEN_HYPHEN; }
#line 70 "scanner.c"
yy10:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':
	case 'i':	goto yy21;
	default:	goto yy5;
	}
yy11:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':
	case 'i':	goto yy23;
	case 'L':
	case 'l':	goto yy24;
	default:	goto yy5;
	}
yy12:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':
	case 'i':	goto yy25;
	case 'O':
	case 'o':	goto yy26;
	default:	goto yy5;
	}
yy13:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'A':
	case 'a':	goto yy27;
	case 'U':
	case 'u':	goto yy28;
	default:	goto yy5;
	}
yy14:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':
	case 'i':	goto yy29;
	default:	goto yy5;
	}
yy15:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':
	case 'i':	goto yy30;
	default:	goto yy5;
	}
yy16:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'N':
	case 'n':	goto yy31;
	default:	goto yy5;
	}
yy17:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'U':
	case 'u':	goto yy32;
	default:	goto yy5;
	}
yy18:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy33;
	case 'I':
	case 'i':	goto yy34;
	default:	goto yy5;
	}
yy19:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy35;
	case 'H':
	case 'h':	goto yy36;
	case 'R':
	case 'r':	goto yy37;
	case 'W':
	case 'w':	goto yy38;
	default:	goto yy5;
	}
yy20:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy39;
	default:	goto yy5;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy40;
	default:	goto yy22;
	}
yy22:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy5;
	case 1: 	goto yy57;
	case 2: 	goto yy77;
	case 3: 	goto yy83;
	case 4: 	goto yy98;
	default:	goto yy118;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'G':
	case 'g':	goto yy41;
	default:	goto yy22;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy42;
	default:	goto yy22;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'F':
	case 'f':	goto yy43;
	case 'R':
	case 'r':	goto yy44;
	case 'V':
	case 'v':	goto yy45;
	default:	goto yy22;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy46;
	case 'U':
	case 'u':	goto yy47;
	default:	goto yy22;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy48;
	default:	goto yy22;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy49;
	default:	goto yy22;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy50;
	default:	goto yy22;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy51;
	default:	goto yy22;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy52;
	default:	goto yy22;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy54;
	default:	goto yy22;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'V':
	case 'v':	goto yy55;
	default:	goto yy22;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'X':
	case 'x':	goto yy56;
	default:	goto yy22;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy58;
	default:	goto yy22;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy60;
	case 'O':
	case 'o':	goto yy61;
	case 'R':
	case 'r':	goto yy62;
	default:	goto yy22;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy63;
	default:	goto yy22;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy64;
	case 'O':
	case 'o':	goto yy65;
	default:	goto yy22;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy67;
	default:	goto yy22;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy68;
	default:	goto yy22;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'H':
	case 'h':	goto yy69;
	default:	goto yy22;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'V':
	case 'v':	goto yy70;
	default:	goto yy22;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy71;
	default:	goto yy22;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy72;
	default:	goto yy22;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy73;
	default:	goto yy22;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy75;
	default:	goto yy22;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy76;
	default:	goto yy22;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'F':
	case 'f':	goto yy78;
	default:	goto yy22;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':
	case 'd':	goto yy80;
	default:	goto yy22;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy81;
	default:	goto yy22;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy82;
	case 'T':
	case 't':	goto yy84;
	default:	goto yy22;
	}
yy52:
	++YYCURSOR;
#line 14 "scanner.re"
	{ return TOKEN_ONE; }
#line 411 "scanner.c"
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy85;
	default:	goto yy22;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy86;
	default:	goto yy22;
	}
yy56:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'T':
	case 't':	goto yy87;
	default:	goto yy57;
	}
yy57:
#line 19 "scanner.re"
	{ return TOKEN_SIX; }
#line 437 "scanner.c"
yy58:
	++YYCURSOR;
#line 23 "scanner.re"
	{ return TOKEN_TEN; }
#line 442 "scanner.c"
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy88;
	default:	goto yy22;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'U':
	case 'u':	goto yy89;
	default:	goto yy22;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy90;
	default:	goto yy22;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy91;
	default:	goto yy22;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy92;
	case 'N':
	case 'n':	goto yy93;
	default:	goto yy22;
	}
yy65:
	++YYCURSOR;
#line 15 "scanner.re"
	{ return TOKEN_TWO; }
#line 484 "scanner.c"
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy94;
	default:	goto yy22;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy96;
	default:	goto yy22;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy97;
	default:	goto yy22;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy99;
	default:	goto yy22;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy100;
	case 'H':
	case 'h':	goto yy101;
	case 'Y':
	case 'y':	goto yy103;
	default:	goto yy22;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy105;
	default:	goto yy22;
	}
yy73:
	++YYCURSOR;
#line 18 "scanner.re"
	{ return TOKEN_FIVE; }
#line 535 "scanner.c"
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'Y':
	case 'y':	goto yy107;
	default:	goto yy22;
	}
yy76:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'T':
	case 't':	goto yy109;
	default:	goto yy77;
	}
yy77:
#line 17 "scanner.re"
	{ return TOKEN_FOUR; }
#line 554 "scanner.c"
yy78:
	++YYCURSOR;
#line 72 "scanner.re"
	{ return TOKEN_HALF; }
#line 559 "scanner.c"
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy110;
	default:	goto yy22;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy111;
	default:	goto yy22;
	}
yy82:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'T':
	case 't':	goto yy112;
	default:	goto yy83;
	}
yy83:
#line 22 "scanner.re"
	{ return TOKEN_NINE; }
#line 585 "scanner.c"
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy113;
	case 'H':
	case 'h':	goto yy114;
	default:	goto yy22;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy116;
	default:	goto yy22;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy117;
	default:	goto yy22;
	}
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy119;
	case 'H':
	case 'h':	goto yy120;
	case 'Y':
	case 'y':	goto yy122;
	default:	goto yy22;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':
	case 'd':	goto yy124;
	case 'T':
	case 't':	goto yy126;
	default:	goto yy22;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy127;
	default:	goto yy22;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy128;
	default:	goto yy22;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy130;
	default:	goto yy22;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'V':
	case 'v':	goto yy131;
	default:	goto yy22;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy132;
	default:	goto yy22;
	}
yy94:
	++YYCURSOR;
#line 13 "scanner.re"
	{ return TOKEN_ZERO; }
#line 668 "scanner.c"
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy133;
	default:	goto yy22;
	}
yy97:
	yyaccept = 4;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy134;
	case 'H':
	case 'h':	goto yy135;
	case 'Y':
	case 'y':	goto yy137;
	default:	goto yy98;
	}
yy98:
#line 21 "scanner.re"
	{ return TOKEN_EIGHT; }
#line 691 "scanner.c"
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy139;
	default:	goto yy22;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy141;
	default:	goto yy22;
	}
yy101:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy142;
	default:	goto yy102;
	}
yy102:
#line 56 "scanner.re"
	{ return TOKEN_FIFTH; }
#line 716 "scanner.c"
yy103:
	++YYCURSOR;
#line 39 "scanner.re"
	{ return TOKEN_FIFTY; }
#line 721 "scanner.c"
yy105:
	++YYCURSOR;
#line 51 "scanner.re"
	{ return TOKEN_FIRST; }
#line 726 "scanner.c"
yy107:
	++YYCURSOR;
#line 37 "scanner.re"
	{ return TOKEN_FORTY; }
#line 731 "scanner.c"
yy109:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy144;
	case 'H':
	case 'h':	goto yy145;
	case 'Y':
	case 'y':	goto yy147;
	default:	goto yy22;
	}
yy110:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy149;
	default:	goto yy22;
	}
yy111:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy150;
	default:	goto yy22;
	}
yy112:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy151;
	case 'H':
	case 'h':	goto yy152;
	case 'Y':
	case 'y':	goto yy154;
	default:	goto yy22;
	}
yy113:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy156;
	default:	goto yy22;
	}
yy114:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy157;
	default:	goto yy115;
	}
yy115:
#line 66 "scanner.re"
	{ return TOKEN_NINTH; }
#line 785 "scanner.c"
yy116:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy159;
	default:	goto yy22;
	}
yy117:
	yyaccept = 5;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'T':
	case 't':	goto yy160;
	default:	goto yy118;
	}
yy118:
#line 20 "scanner.re"
	{ return TOKEN_SEVEN; }
#line 804 "scanner.c"
yy119:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy161;
	default:	goto yy22;
	}
yy120:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy162;
	default:	goto yy121;
	}
yy121:
#line 58 "scanner.re"
	{ return TOKEN_SIXTH; }
#line 822 "scanner.c"
yy122:
	++YYCURSOR;
#line 40 "scanner.re"
	{ return TOKEN_SIXTY; }
#line 827 "scanner.c"
yy124:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy164;
	default:	goto yy125;
	}
yy125:
#line 52 "scanner.re"
	{ return TOKEN_THIRD; }
#line 838 "scanner.c"
yy126:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy166;
	case 'Y':
	case 'y':	goto yy167;
	default:	goto yy22;
	}
yy127:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy169;
	default:	goto yy22;
	}
yy128:
	++YYCURSOR;
#line 16 "scanner.re"
	{ return TOKEN_THREE; }
#line 859 "scanner.c"
yy130:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy170;
	default:	goto yy22;
	}
yy131:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy171;
	default:	goto yy22;
	}
yy132:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'Y':
	case 'y':	goto yy173;
	default:	goto yy22;
	}
yy133:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy175;
	default:	goto yy22;
	}
yy134:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy177;
	default:	goto yy22;
	}
yy135:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy178;
	default:	goto yy136;
	}
yy136:
#line 62 "scanner.re"
	{ return TOKEN_EIGHTH; }
#line 905 "scanner.c"
yy137:
	++YYCURSOR;
#line 42 "scanner.re"
	{ return TOKEN_EIGHTY; }
#line 910 "scanner.c"
yy139:
	++YYCURSOR;
#line 24 "scanner.re"
	{ return TOKEN_ELEVEN; }
#line 915 "scanner.c"
yy141:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy180;
	default:	goto yy22;
	}
yy142:
	++YYCURSOR;
#line 57 "scanner.re"
	{ return TOKEN_FIFTH; }
#line 927 "scanner.c"
yy144:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy182;
	default:	goto yy22;
	}
yy145:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy183;
	default:	goto yy146;
	}
yy146:
#line 54 "scanner.re"
	{ return TOKEN_FOURTH; }
#line 945 "scanner.c"
yy147:
	++YYCURSOR;
#line 38 "scanner.re"
	{ return TOKEN_FORTY; }
#line 950 "scanner.c"
yy149:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':
	case 'd':	goto yy185;
	default:	goto yy22;
	}
yy150:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy187;
	default:	goto yy22;
	}
yy151:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy189;
	default:	goto yy22;
	}
yy152:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy190;
	default:	goto yy153;
	}
yy153:
#line 64 "scanner.re"
	{ return TOKEN_NINTH; }
#line 982 "scanner.c"
yy154:
	++YYCURSOR;
#line 43 "scanner.re"
	{ return TOKEN_NINETY; }
#line 987 "scanner.c"
yy156:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy192;
	default:	goto yy22;
	}
yy157:
	++YYCURSOR;
#line 67 "scanner.re"
	{ return TOKEN_NINTH; }
#line 999 "scanner.c"
yy159:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy194;
	default:	goto yy22;
	}
yy160:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy196;
	case 'H':
	case 'h':	goto yy197;
	case 'Y':
	case 'y':	goto yy199;
	default:	goto yy22;
	}
yy161:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy201;
	default:	goto yy22;
	}
yy162:
	++YYCURSOR;
#line 59 "scanner.re"
	{ return TOKEN_SIXTH; }
#line 1029 "scanner.c"
yy164:
	++YYCURSOR;
#line 53 "scanner.re"
	{ return TOKEN_THIRD; }
#line 1034 "scanner.c"
yy166:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy203;
	default:	goto yy22;
	}
yy167:
	++YYCURSOR;
#line 36 "scanner.re"
	{ return TOKEN_THIRTY; }
#line 1046 "scanner.c"
yy169:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy204;
	default:	goto yy22;
	}
yy170:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy205;
	default:	goto yy22;
	}
yy171:
	++YYCURSOR;
#line 25 "scanner.re"
	{ return TOKEN_TWELVE; }
#line 1065 "scanner.c"
yy173:
	++YYCURSOR;
#line 35 "scanner.re"
	{ return TOKEN_TWENTY; }
#line 1070 "scanner.c"
yy175:
	++YYCURSOR;
#line 48 "scanner.re"
	{ return TOKEN_BILLION; }
#line 1075 "scanner.c"
yy177:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy206;
	default:	goto yy22;
	}
yy178:
	++YYCURSOR;
#line 63 "scanner.re"
	{ return TOKEN_EIGHTH; }
#line 1087 "scanner.c"
yy180:
	++YYCURSOR;
#line 28 "scanner.re"
	{ return TOKEN_FIFTEEN; }
#line 1092 "scanner.c"
yy182:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy208;
	default:	goto yy22;
	}
yy183:
	++YYCURSOR;
#line 55 "scanner.re"
	{ return TOKEN_FOURTH; }
#line 1104 "scanner.c"
yy185:
	++YYCURSOR;
#line 45 "scanner.re"
	{ return TOKEN_HUNDRED; }
#line 1109 "scanner.c"
yy187:
	++YYCURSOR;
#line 47 "scanner.re"
	{ return TOKEN_MILLION; }
#line 1114 "scanner.c"
yy189:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy210;
	default:	goto yy22;
	}
yy190:
	++YYCURSOR;
#line 65 "scanner.re"
	{ return TOKEN_NINTH; }
#line 1126 "scanner.c"
yy192:
	++YYCURSOR;
#line 33 "scanner.re"
	{ return TOKEN_NINETEEN; }
#line 1131 "scanner.c"
yy194:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy212;
	default:	goto yy195;
	}
yy195:
#line 69 "scanner.re"
	{ return TOKEN_QUARTER; }
#line 1142 "scanner.c"
yy196:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy214;
	default:	goto yy22;
	}
yy197:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'S':
	case 's':	goto yy215;
	default:	goto yy198;
	}
yy198:
#line 60 "scanner.re"
	{ return TOKEN_SEVENTH; }
#line 1160 "scanner.c"
yy199:
	++YYCURSOR;
#line 41 "scanner.re"
	{ return TOKEN_SEVENTY; }
#line 1165 "scanner.c"
yy201:
	++YYCURSOR;
#line 29 "scanner.re"
	{ return TOKEN_SIXTEEN; }
#line 1170 "scanner.c"
yy203:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy217;
	default:	goto yy22;
	}
yy204:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':
	case 'd':	goto yy219;
	default:	goto yy22;
	}
yy205:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy221;
	default:	goto yy22;
	}
yy206:
	++YYCURSOR;
#line 31 "scanner.re"
	{ return TOKEN_EIGHTEEN; }
#line 1196 "scanner.c"
yy208:
	++YYCURSOR;
#line 27 "scanner.re"
	{ return TOKEN_FOURTEEN; }
#line 1201 "scanner.c"
yy210:
	++YYCURSOR;
#line 32 "scanner.re"
	{ return TOKEN_NINETEEN; }
#line 1206 "scanner.c"
yy212:
	++YYCURSOR;
#line 70 "scanner.re"
	{ return TOKEN_QUARTER; }
#line 1211 "scanner.c"
yy214:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy223;
	default:	goto yy22;
	}
yy215:
	++YYCURSOR;
#line 61 "scanner.re"
	{ return TOKEN_SEVENTH; }
#line 1223 "scanner.c"
yy217:
	++YYCURSOR;
#line 26 "scanner.re"
	{ return TOKEN_THIRTEEN; }
#line 1228 "scanner.c"
yy219:
	++YYCURSOR;
#line 46 "scanner.re"
	{ return TOKEN_THOUSAND; }
#line 1233 "scanner.c"
yy221:
	++YYCURSOR;
#line 49 "scanner.re"
	{ return TOKEN_TRILLION; }
#line 1238 "scanner.c"
yy223:
	++YYCURSOR;
#line 30 "scanner.re"
	{ return TOKEN_SEVENTEEN; }
#line 1243 "scanner.c"
}
#line 80 "scanner.re"

}

/*
scanstate* numerizer_attach(scanstate *ss)
{
	if(ss) {
		ss->state = numerizer_start;
		ss->line = 1;
	}

	return ss;
}
*/
